# GBA-Emulator

./: CMakeLists.txt  README.md
src/: apu.c  apu.h  armInstructions.c  armInstructions.h  armProc.c  common.h  cpu.c  cpu.h  dma.c  dma.h  main.c  memory.c  memory.h  ppu.c  ppu.h  sdlUtil.c  sdlUtil.h  thumbInstructions.c  thumbInstructions.h  thumbProc.c
